# diffqcqp

./: .gitignore  CMakeLists.txt  README.md  lorentz_test.py  pybindings.cpp  qcqp.py  setup.py  test_script.py
qcqplib/: Solver.cpp  Solver.hpp
src/diffqcqp/: CMakeLists.txt  Solver.cpp  __init__.py  diffsolvers.cpp  main.cpp  qcqp.py
test/: lorentz_test.py  test_script.py
